--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -1,26 +1,17 @@
+name: reviewdog
+on: [pull_request]
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Rubocop Linter Action
-      uses: andrewmcodes/rubocop-linter-action@v3.2.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
+    - name: Check out code
+      uses: actions/checkout@v2
+    - uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.5.0
-    - name: Cache gems
-      uses: actions/cache@v1
+    - name: rubocop
+      uses: reviewdog/action-rubocop@v1
       with:
-        path: vendor/bundle
-        key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-gem-
-    - name: Install dependencies
-      run: |
-        gem install bundler
-        bundle install --path vendor/bundle --without production
-    - name: Rubocop
-      run: bundle exec rubocop
+        rubocop_version: gemfile
+        github_token: ${{ secrets.github_token }}
+        reporter: github-pr-review # Default is github-pr-check
