--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -1,6 +1,31 @@
-name: reviewdog
-on: [pull_request]
+name: GitHub-Actions
+on: 
+  push:
+    branches:
+      - master
+    paths-ignore:
+      - .github/**
+      - bin/**
+      - .gitignore
+      - .rspec
+      - CHANGELOG.md
+      - CODE_OF_CONDUCT.md
+      - LICENSE.txt
+      - README.md
+
+  pull_request:
 jobs:
+  rspec:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v2
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: 2.6.6
+        bundler-cache: true
+    - name: Test with Rspec
+      run: bundle exec rspec
   rubocop:
     runs-on: ubuntu-latest
     steps:
