Create a Docker for the verification environment. Some modify.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -171,7 +171,10 @@ Metrics/MethodLength:
   Max: 30
 
 Metrics/AbcSize:
-  Max: 30
+  Max: 50
 
 Metrics/BlockLength:
   Max: 35
+
+Style/FloatDivision:
+  Enabled: false
